--- a/k8s/gke/k8s-installer/create-gke-cluster.yml
+++ b/k8s/gke/k8s-installer/create-gke-cluster.yml
@@ -37,22 +37,7 @@
           with_random_choice: "{{ zone }}"
 
         - name: create GKE cluster
-          gcp_container_cluster:
-            name: "{{ cluster_name }}"
-            initial_node_count: "{{ initial_node_count }}"
-            monitoring_service: none
-            logging_service: none
-            node_config:
-              machine_type: "{{ machine_type }}"
-              disk_size_gb: "{{ disk_size_gb }}"
-              image_type: "{{ image_type }}"
-            zone: "{{ set_zone }}"
-            project: "{{ project }}"
-            auth_kind: "{{ auth_kind }}"
-            scopes:
-              - https://www.googleapis.com/auth/cloud-platform
-            state: present
-          no_log: True
+          shell: gcloud container clusters create {{ cluster_name }}  --enable-autoscaling --max-nodes=5 --min-nodes=3 --machine-type=n1-standard-4 --disk-size=80 --image-type=ubuntu --zone {{ set_zone }}  --project={{ project }}  --scopes=https://www.googleapis.com/auth/cloud-platform --impersonate-service-account=svc-demo@mayadata-demo-247709.iam.gserviceaccount.com
 
         - name: Save cluster info
           lineinfile:
