(refactor): Propagating the kubeconfig of the newly created GCP into experiment stages.
Signed-off-by: Udit Gaurav <uditgaurav@gmail.com>

--- a/k8s/gke/k8s-installer/create-gke-cluster.yml
+++ b/k8s/gke/k8s-installer/create-gke-cluster.yml
@@ -88,4 +88,6 @@
             flag: "Test Failed"
 
         - fail:
-            msg: "Cluster creation failed"
+            msg: "The cluster creation failed"
+          when: true
+
