--- a/k8s/gke/k8s-installer/delete-gke-cluster.yml
+++ b/k8s/gke/k8s-installer/delete-gke-cluster.yml
@@ -52,3 +52,7 @@
         - name: Set Test Status
           set_fact:
             flag: "Test Failed"
+        - fail:
+            msg: "The cluster deletion failed"
+          when: true
+
